[package]
name = "ngrok"
version = "0.5.0"
authors = ["nkconnor <ngrok@nconnor.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A minimal ngrok wrapper"
repository = "https://github.com/nkconnor/ngrok"
documentation = "https://docs.rs/ngrok"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "1", features=["json"] }
url = "2"
thiserror = "1"
serde_json = "1"

[dev_dependencies]
warp = "0.2"
tokio = {version="0.2", features=["full"]}
