[package]
name = "ngrok"
version = "0.6.0"
authors = ["nkconnor <email@nconnor.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A minimal ngrok wrapper"
repository = "https://github.com/nkconnor/ngrok"
documentation = "https://docs.rs/ngrok"
readme = "README.md"

[dependencies]
ureq = { version = "1", features=["json"] }
url = "2"

[dev_dependencies]
warp = "0.2"
tokio = {version="0.2", features=["full"]}
